--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "cross-env npm run cleanup && npm run compile",
+    "build": "npm-run-all -s cleanup compile",
     "cleanup": "node -e \"require('fs').rmSync('dist', {force: true, recursive: true});\"",
-    "compile": "tsc",
-    "prepublishOnly": "cross-env npm run build && npm run test",
-    "preversion": "cross-env npm run build && npm run test",
-    "test": "node --experimental-specifier-resolution=node dist/tests.js",
-    "typecheck": "tsc --noEmit"
+    "compile": "npm-run-all -s compile:src compile:tests",
+    "compile:src": "esbuild index.ts --bundle --outfile=dist/index.js --platform=neutral --minify",
+    "compile:tests": "esbuild tests.ts --bundle --outfile=dist/tests.js --platform=neutral --minify",
+    "prepublishOnly": "npm-run-all -s build test",
+    "preversion": "npm-run-all -s build test",
+    "test": "node dist/tests.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,7 @@
   "author": "axtk",
   "license": "ISC",
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "typescript": "^5.0.4"
+    "esbuild": "^0.20.2",
+    "npm-run-all": "^4.1.5"
   }
 }
