--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "skdl",
   "version": "1.1.8",
-  "description": "Helps set up a promisified polling",
+  "description": "Polling as a Promise",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
